fix grid options cutting off text description between 801px width and 1104px width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ ul li a {
 .options {
     background-color: rgba(41, 56, 71, .8);
     color: #EFE6DD;
-    height: 170px;
+    max-height: 250px;
     text-align: center;
     padding: 25px 10px 50px 10px;
     margin: 3px 2px 0 0;
